[project]
name = "feishu-doc-down"
version = "0.1.0"
description = "Download/export documents from a Feishu user's My Space."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "qrcode>=7.4",
    "requests>=2.31.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.6",
]

[project.scripts]
feishu-doc-down = "feishu_doc_down.cli:main"

[tool.setuptools]
packages = ["feishu_doc_down"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
